Enable sessions in editor, fix CSS and make tabs more flexible

--- a/test/runner.html
+++ b/test/runner.html
@@ -17,6 +17,8 @@
   <div id="mocha"></div>
   <div id="codebasket-test"></div>
   <script src="support/custom_event_polyfill.js"></script>
+  <script src="ace/ace.js"></script>
+  <script src="ace/ext-language_tools.js"></script>
   <script src="../build/codebasket.js"></script>
   <script src="support/expect.min.js"></script>
   <script src="support/expect.min.js"></script>
