--- a/test/runner.html
+++ b/test/runner.html
@@ -23,7 +23,14 @@
   <script src="support/expect.min.js"></script>
   <script src="support/expect.min.js"></script>
   <script src="../node_modules/mocha/mocha.js"></script>
-  <script>mocha.setup('bdd');</script>
+  <script>
+    if (window.initMochaPhantomJS) {
+      window.initMochaPhantomJS();
+    }
+
+    mocha.setup('bdd');
+    mocha.reporter('html');
+  </script>
   <script src="index.js"></script>
   <script>
     if (window.mochaPhantomJS) {
