--- a/test/runner.html
+++ b/test/runner.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="../node_modules/mocha/mocha.css" />
+  <link rel="stylesheet prefetch" href="http://codepen.io/assets/reset/reset.css">
   <link rel="stylesheet" href="../build/codebasket.css" />
   <style media="screen">
     #codebasket-test {
@@ -16,6 +17,8 @@
 <body>
   <div id="mocha"></div>
   <div id="codebasket-test"></div>
+  <script src="https://rawgit.com/aFarkas/html5shiv/master/dist/html5shiv.js"></script>
+  <script src="https://rawgit.com/lodash/lodash/4.0.1/dist/lodash.core.min.js"></script>
   <script src="support/custom_event_polyfill.js"></script>
   <script src="ace/ace.js"></script>
   <script src="ace/ext-language_tools.js"></script>
