Update requirements for building and testing

--- a/test/runner.html
+++ b/test/runner.html
@@ -18,8 +18,8 @@
 <body>
   <div id="mocha"></div>
   <div id="codebasket-test"></div>
-  <script src="https://rawgit.com/aFarkas/html5shiv/master/dist/html5shiv.js"></script>
-  <script src="https://rawgit.com/lodash/lodash/4.0.1/dist/lodash.core.min.js"></script>
+  <script src="support/html5shiv.js"></script>
+  <script src="support/lodash.core.min.js"></script>
   <script src="support/custom_event_polyfill.js"></script>
   <script src="ace/ace.js"></script>
   <script src="ace/ext-language_tools.js"></script>
